fix: CSS change in spacing control

--- a/src/components/spacing-control/editor.lazy.scss
+++ b/src/components/spacing-control/editor.lazy.scss
@@ -140,6 +140,7 @@
 	}
 	.uagb-control__actions .components-tab-panel__tabs {
 		padding-right: 4px;
+		margin-right: 0;
 	}
 	.uagb-control__header {
 		justify-content: space-between;
